--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@humeai/voice-react": "^0.1.15",
-    "hume": "^0.8.10",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
@@ -23,6 +22,7 @@
     "hume": "^0.8.10",
     "lucide-react": "^0.394.0",
     "next": "14.2.3",
+    "openai": "^4.97.0",
     "react": "^18",
     "react-dom": "^18",
     "react-virtualized": "^9.22.5",
@@ -41,5 +41,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
