--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openai": "^4.97.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "react-virtualized": "^9.22.5",
     "remeda": "^2.0.9",
     "server-only": "^0.0.1",
