--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "geist": "^1.3.0",
     "hume": "^0.8.10",
     "lucide-react": "^0.394.0",
-    "next": "14.2.3",
+    "next": "^14.2.28",
     "openai": "^4.97.0",
     "react": "^18",
     "react-dom": "^18",
